[tool.poetry]
name = "cprt_oscal"
version = "0.1.0"
description = "A utility library to convert NIST CPRT data to OSCAL JSON catalogs."
authors = ["Al S <xee5ch@member.fsf.org>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
cpyrt = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
